# GPT-SoVITS-API

./: .gitignore  DEPLOY.md  config.yaml  pyproject.toml  quick_tts.py  tts_api.py
GPT_SoVITS/: inference_webui.py
GPT_SoVITS/TTS_infer_pack/: TTS.py
GPT_SoVITS/configs/: tts_infer.yaml
input/: ref_text.txt
